Fix spinner, hide nav on menu click on mobile, fix double scroll bar on mobile

--- a/sass/predix-ui.scss
+++ b/sass/predix-ui.scss
@@ -229,7 +229,7 @@ html,body{
   height: 100vh;
   margin: 45px 0px 0px 0px;
   position: fixed;
-  overflow-y: scroll;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
 .iframe{
